@@ -161,6 +161,9 @@ static void camel_imap_folder_changed_for_idle (CamelFolder *folder, int exists,
 
 GPtrArray* _camel_imap_store_get_recent_messages (CamelImapStore *imap_store, const char *folder_name, int *messages, int *unseen, gboolean withthem);
 
+static void imap_delete_attachments (CamelFolder *folder, const char *uid);
+
+
 #ifdef G_OS_WIN32
 /* The strtok() in Microsoft's C library is MT-safe (but still uses
  * only one buffer pointer per thread, but for the use of strtok_r()
@@ -190,6 +193,7 @@ camel_imap_folder_class_init (CamelImapFolderClass *camel_imap_folder_class)
 	camel_folder_class->search_by_uids = imap_search_by_uids;
 	camel_folder_class->search_free = imap_search_free;
 	camel_folder_class->thaw = imap_thaw;
+	camel_folder_class->delete_attachments = imap_delete_attachments;
 
 	camel_disco_folder_class->refresh_info_online = imap_refresh_info;
 	camel_disco_folder_class->sync_online = imap_sync_online;
@@ -332,6 +336,14 @@ camel_imap_folder_new (CamelStore *parent, const char *folder_name,
 	imap_folder->search = camel_imap_search_new(folder_dir);
 
 	return folder;
+}
+
+static void
+imap_delete_attachments (CamelFolder *folder, const char *uid)
+{
+	CamelImapMessageCache *cache = CAMEL_IMAP_FOLDER (folder)->cache;
+	camel_imap_message_cache_delete_attachments (cache, uid);
+	return;
 }
 
 static int 
