@@ -72,6 +72,8 @@ void _tny_camel_folder_check_unread_count (TnyCamelFolder *self);
 void _tny_camel_folder_unreason (TnyCamelFolderPriv *priv);
 void _tny_camel_folder_reason (TnyCamelFolderPriv *priv);
 
+void _tny_camel_folder_uncache_attachments (TnyCamelFolder *self, const gchar *uid);
+
 void _tny_camel_folder_remove_folder_actual (TnyFolderStore *self, TnyFolder *folder, GError **err);
 
 
