@@ -139,7 +139,6 @@ notify_folder_observers_about (TnyFolder *self, TnyFolderChange *change)
 
 }
 
-
 void 
 _tny_camel_folder_check_unread_count (TnyCamelFolder *self)
 {
@@ -433,6 +432,24 @@ load_folder (TnyCamelFolderPriv *priv)
 	return retval;
 }
 
+void 
+_tny_camel_folder_uncache_attachments (TnyCamelFolder *self, const gchar *uid)
+{
+	TnyCamelFolderPriv *priv = TNY_CAMEL_FOLDER_GET_PRIVATE (self);
+
+	g_static_rec_mutex_lock (priv->folder_lock);
+
+	if (!priv->folder || !priv->loaded || !CAMEL_IS_FOLDER (priv->folder))
+		if (!load_folder_no_lock (priv))
+		{
+			g_static_rec_mutex_unlock (priv->folder_lock);
+			return;
+		}
+
+	camel_folder_delete_attachments (priv->folder, uid);
+
+	g_static_rec_mutex_unlock (priv->folder_lock);
+}
 
 static void 
 tny_camel_folder_add_msg (TnyFolder *self, TnyMsg *msg, GError **err)
